docs: 系统化整理技术文档体系
- 增加 AI、协议、声学、嵌入式、Rust、Git 等专题入口与细节文档
- 重构 Vim、Git、Spring、JVM、设计模式等专题内容与导航结构
- 补充多组 SVG 图示资源，提升文档的体系化说明和阅读效率
- 新增项目文档协作约束 AGENTS.md 与 miniapp 基础结构